logo alignment fix on mobile - 2

--- a/setup/style/style.css
+++ b/setup/style/style.css
@@ -71,7 +71,7 @@ header {
   position: fixed;
   top: 0;
   z-index: 100;
-  padding: 0.5rem;
+  padding-bottom: 0.5rem;
   width: 100%;
   max-width: var(--max-width-minus);
   background-image:
